Add multi-instance support with configurable serial port paths
- Introduced a new guide for running multiple instances of the OpenEVSE emulator and native firmware.
- Enhanced configuration options in `config.json` for serial port management.
- Updated `VirtualSerialPort` class to support explicit PTY paths and reconnection behavior.
- Modified main application to apply environment variable overrides for serial configuration.

--- a/config.json
+++ b/config.json
@@ -2,7 +2,10 @@
   "serial": {
     "mode": "pty",
     "tcp_port": 8023,
-    "baudrate": 115200
+    "baudrate": 115200,
+    "pty_path": null,
+    "reconnect_timeout_sec": 60,
+    "reconnect_backoff_ms": 1000
   },
   "evse": {
     "firmware_version": "8.2.1",
